# cad-firm

./: .env  .gitignore  main.py  pyproject.toml
app/lisp_dept/tasks/: autolisp_qa.py  generate_autolisp.py
app/lisp_dept/workers/: autolisp_qa.py  drafts_person.py
app/planning_dept/responses/: building_plan.py
app/planning_dept/tasks/: solution_design.py  solution_design_qa.py
app/planning_dept/workers/: design_architect.py  lead_architect.py  sample_house.html
app/sketching_dept/tasks/: sketch.py
app/sketching_dept/workers/: sketch_artist.py
app/utils/: autolisp_manager.py  plan_number.py
